mongo/mongo.yaml
#MongoDB deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:3.2
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongodb-persistent-storage
              mountPath: /data/db # MongoDB cotainer path
      volumes:
        - name: mongodb-persistent-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc

#MongoDB service
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb #As a ref from deployment labels
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017 #As a ref from target containerPort
