mongo/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mongo-express-ingress
spec:
  rules:
    - host: expresslocal.com
      http:
        paths:
          - path: /
            backend:
              serviceName: mongo-express-internal-service
              servicePort: 8080
      # Mulitple hosts example
      # - host: analytics.dashboard.com
      #   http:
      #     paths:
      #       - path: /
      #         backend:
      #           serviceName: some-service-name
      #           servicePort: 3000

      # each time run the command when you start minikube minikube addons enable ingress
